[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.15"
libloading = "0.8.5"


[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
]
